# platform

./: CMakeLists.txt  License.rst  Readme.rst
configure/: platform-config.cmake.in
docs/: CMakeLists.txt  arch.rst  compiler.rst  conf.py  endian.rst  index.rst  intrinsic.rst  os.rst  simd.rst  usage.rst
include/platform/: arch.hpp  compiler.hpp  endian.hpp  intrinsic.hpp  os.hpp  simd.hpp  utility.hpp
package/: CMakeLists.txt
tests/: CMakeLists.txt  intrinsic.cpp  os.cpp  traits.cpp
